Add Debian Buster to Travis CI tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   - distro: "ubuntu1604"
   - distro: "ubuntu1804"
   - distro: "debian9"
+  - distro: "debian10"
 
 script:
   # Download test shim.
