pip env variables added
added extra args and environment for pip so it is possible to set e.g. a proxy

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,6 +50,9 @@ docker__pip_dependencies:
   - "python-setuptools"
   - "python{{ '3' if ansible_python.version.major == 3 else '' }}-pip"
 
+docker__pip_environment: []
+docker__pip_extra_args: ""
+
 docker__pip_virtualenv: "/usr/local/lib/docker/virtualenv"
 
 docker__default_pip_packages:
