Add support for ubuntu 19.04 (disco), issue #69

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,6 +12,7 @@ galaxy_info:
       versions:
         - "xenial"
         - "bionic"
+        - "disco"
     - name: "Debian"
       versions:
         - "stretch"
