Add gcc as a Docker dependency

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,7 @@ docker__package_dependencies:
   - "apt-transport-https"
   - "ca-certificates"
   - "cron"
+  - "gcc"
   - "gnupg2"
   - "software-properties-common"
 
