--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,6 +39,7 @@
     name: >
       {{ item.name }}{% if item.version | d() %}=={{ item.version }}{% endif %}
     virtualenv: "{{ docker__pip_virtualenv }}"
+    virtualenv_python: "python3"
     state: "{{ item.state | d('present') }}"
   loop: "{{ docker__default_pip_packages + docker__pip_packages }}"
   when: item.name | d()
@@ -46,7 +47,7 @@
 - name: Symlink Python binary to /usr/local/bin/python-docker
   file:
     path: "/usr/local/bin/python-docker"
-    src: "{{ docker__pip_virtualenv }}/bin/python"
+    src: "{{ docker__pip_virtualenv }}/bin/python3"
     force: true
     state: "link"
 
