Set up config before installing

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,6 +29,25 @@
     repo: "{{ docker__apt_repository }}"
     update_cache: true
 
+- name: Create Docker configuration directory
+  file:
+    path: "{{ item }}"
+    state: "directory"
+    owner: "root"
+    group: "root"
+    mode: "0755"
+  loop:
+    - "/etc/docker"
+
+- name: Configure Docker daemon options (json)
+  template:
+    src: "etc/docker/daemon.json.j2"
+    dest: "/etc/docker/daemon.json"
+    owner: "root"
+    group: "root"
+    mode: "0644"
+  when: docker__default_daemon_json | d() or docker__daemon_json | d()
+
 - name: Install Docker
   apt:
     name: "docker-{{ docker__edition }}"
@@ -68,7 +87,7 @@
     append: true
   loop: "{{ docker__users }}"
 
-- name: Create Docker configuration directories
+- name: Create Docker configuration directory
   file:
     path: "{{ item }}"
     state: "directory"
@@ -76,18 +95,7 @@
     group: "root"
     mode: "0755"
   loop:
-    - "/etc/docker"
     - "/etc/systemd/system/docker.service.d"
-
-- name: Configure Docker daemon options (json)
-  template:
-    src: "etc/docker/daemon.json.j2"
-    dest: "/etc/docker/daemon.json"
-    owner: "root"
-    group: "root"
-    mode: "0644"
-  when: docker__default_daemon_json | d() or docker__daemon_json | d()
-  notify: ["Restart Docker"]
 
 - name: Configure Docker daemon options (flags)
   template:
