--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,13 +43,6 @@
   loop: "{{ docker__default_pip_packages + docker__pip_packages }}"
   when: item.name | d()
 
-- name: Symlink Python binary to /usr/local/bin/python-docker
-  file:
-    path: "/usr/local/bin/python-docker"
-    src: "{{ docker__pip_virtualenv }}/bin/python"
-    force: true
-    state: "link"
-
 - name: Symlink selected Python package binaries to /usr/local/bin
   file:
     path: "{{ item.path }}"
@@ -144,7 +137,7 @@
   loop: "{{ docker__registries }}"
   when: item.username | d() and item.password | d()
   vars:
-    ansible_python_interpreter: "{{ '/usr/bin/env python-docker' }}"
+    ansible_python_interpreter: "/usr/local/lib/docker/virtualenv/bin/python"
 
 - name: Remove Docker related cron jobs
   file:
