--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,10 +39,12 @@ docker__package_dependencies:
   - "gnupg2"
   - "software-properties-common"
 
+docker__arch: "{{ 'arm64' if ansible_architecture == 'aarch64' else 'amd64' }}"
+
 docker__apt_key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
 docker__apt_key_url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
 docker__apt_repository: >
-  deb [arch=amd64]
+  deb [arch={{ docker__arch }}]
   https://download.docker.com/linux/{{ ansible_distribution | lower }}
   {{ ansible_distribution_release }} {{ docker__channel | join (' ') }}
 
