Support multiple CPU architectures
Amazon introduced certain server types such as the Gravitron which uses
an ARM based processor. There's other devices like Raspberry Pi which
uses a slightly different but similar architecture.

Thanks @pcolmer for the idea of doing this and @drybjed for the map
implementation idea.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,10 +39,16 @@ docker__package_dependencies:
   - "gnupg2"
   - "software-properties-common"
 
+docker__architecture_map:
+  "x86_64": "amd64"
+  "aarch": "arm64"
+  "armhf": "armhf"
+  "armv7l": "armhf"
+
 docker__apt_key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
 docker__apt_key_url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
 docker__apt_repository: >
-  deb [arch=amd64]
+  deb [arch={{ docker__architecture_map[ansible_architecture] }}]
   https://download.docker.com/linux/{{ ansible_distribution | lower }}
   {{ ansible_distribution_release }} {{ docker__channel | join (' ') }}
 
