--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -54,7 +54,7 @@ docker__apt_repository: >
 
 docker__pip_dependencies:
   - "gcc"
-  - "python3-setuptools"
+  - "python-setuptools"
   - "python3-dev"
   - "python3-pip"
   - "virtualenv"
