Fix missing aarch64 architecture

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,6 +41,7 @@ docker__package_dependencies:
 
 docker__architecture_map:
   "x86_64": "amd64"
+  "aarch64": "arm64"
   "aarch": "arm64"
   "armhf": "armhf"
   "armv7l": "armhf"
