--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,8 @@ docker__compose_version: ""
 
 docker__users: ["{{ ansible_env.SUDO_USER | d('root') }}"]
 
+docker__login_become_user: "{{ docker__users | first | d('root') }}"
+
 docker__registries: []
 
 docker__default_daemon_json: |
