Add become: true to task with become_user
The Ansible Galaxy recently flagged this as being a warning during
its linting check with ansible-lint and it degrades the quality of
this role.

This is a pretty ridiculous warning to have because most folks would set
become: true at the play level, not role level. I don't know of anyone
who explicitly sets become: true on every task instead of once at the
play level.

Maybe one day ansible-lint will evolve to understand that playbooks and
roles are used together.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -144,6 +144,7 @@
     state: "{{ item.state | d('present') }}"
   loop: "{{ docker__registries }}"
   when: item.username | d() and item.password | d()
+  become: true
   become_user: "{{ docker__login_become_user | d('root') }}"
   vars:
     ansible_python_interpreter: "{{ '/usr/bin/env python3-docker' }}"
