Make ansible delete the old preference control file, remaining from the file name change in 067fdb4

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Remove old preference control file
+  file:
+    path: "/etc/apt/preferences.d/docker-ce.pref"
+    state: "absent"
+
 - name: Disable pinned Docker version
   file:
     dest: "/etc/apt/preferences.d/docker.pref"
