Omit Docker registry password in Ansible's output
This solution is nicer than no_log: true since it allows us to define
a list of custom properties to output instead of ignoring everything.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -143,6 +143,8 @@
     config_path: "{{ item.config_path | d(omit) }}"
     state: "{{ item.state | d('present') }}"
   loop: "{{ docker__registries }}"
+  loop_control:
+    label: '{{ {"registry_url": item.registry_url | d("https://index.docker.io/v1/"), "username": item.username, "state": item.state | d("present")} }}'
   when: item.username | d() and item.password | d()
   become: true
   become_user: "{{ docker__login_become_user | d('root') }}"
