replace reload systemd daemon task by a handler

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -99,7 +99,9 @@
     mode: "0644"
   register: docker__register_daemon_flags
   when: docker__daemon_flags | d()
-  notify: ["Restart Docker"]
+  notify:
+    - "Reload systemd daemon"
+    - "Restart Docker"
 
 - name: Configure Docker daemon environment variables
   template:
@@ -110,7 +112,9 @@
     mode: "0644"
   register: docker__register_daemon_environment
   when: docker__daemon_environment | d()
-  notify: ["Restart Docker"]
+  notify:
+    - "Reload systemd daemon"
+    - "Restart Docker"
 
 - name: Configure custom systemd unit file override
   template:
@@ -121,14 +125,9 @@
     mode: "0644"
   register: docker__register_custom_override
   when: docker__systemd_override | d()
-  notify: ["Restart Docker"]
-
-- name: Reload systemd daemon
-  systemd:
-    daemon_reload: true
-  when: docker__register_daemon_flags is changed
-        or docker__register_daemon_environment is changed
-        or docker__register_custom_override is changed
+  notify:
+    - "Reload systemd daemon"
+    - "Restart Docker"
 
 - name: Restart Docker now to make sure `docker login` works
   meta: "flush_handlers"
