--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -117,8 +117,9 @@
   stat:
     path: "/etc/systemd/system/docker.service.d/environment.conf"
   register: docker__register_daemon_environment
+  when: not docker__daemon_environment
 
-- name: Remove environment file when removing all environement variables
+- name: Remove environment file when removing all environment variables
   file:
     path: "/etc/systemd/system/docker.service.d/environment.conf"
     state: "absent"
