--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches:
       - "*"
+    types:
+      - opened
+      - reopened
+      - synchronize
   push:
     branches:
       - "main"
@@ -14,7 +18,7 @@ jobs:
     runs-on: "ubuntu-20.04"
     strategy:
       matrix:
-        distro: ["ubuntu1804", "ubuntu2004", "debian9", "debian10"]
+        distro: ["ubuntu1804", "ubuntu2004", "debian9", "debian10", "fedora24", "fedora27", "centos6", "centos7"]
 
     steps:
       - uses: "actions/checkout@v2"
