--- a/tests/test.yml
+++ b/tests/test.yml
@@ -39,3 +39,11 @@
       apt:
         update_cache: true
       changed_when: false
+      when: ansible_facts['os_family'] == "Debian"
+    
+    - name: Run the equivalent of "yum update"
+      yum:
+        update_cache: true
+      changed_when: false
+      when: ansible_facts['os_family'] == "RedHat"
+
