--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -73,7 +73,7 @@ docker__pip_dependencies:
 
 docker__pip_apt_dependencies:
   - "python3-dev"
-  - "python3-venv"
+  - "virtualenv"
 
 docker__pip_yum_dependencies:
   - "platform-python-devel"
