--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: "ubuntu-20.04"
     strategy:
       matrix:
-        distro: ["ubuntu1804", "ubuntu2004", "debian9", "fedora27"]
+        distro: ["ubuntu1804", "ubuntu2004", "debian9", "debian10", "fedora27"]
 
     steps:
       - uses: "actions/checkout@v2"
