Officially support Ubuntu 22.04 and Debian 11
This also means officially dropping support for Ubuntu 18.04 and
Debian 9 although technically the role still works for those versions.

That's an arbitrary decision I've made to support the current latest LTS
and stable releases along with 1 version back.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: "ubuntu-20.04"
     strategy:
       matrix:
-        distro: ["ubuntu1804", "ubuntu2004", "debian9", "debian10"]
+        distro: ["ubuntu2004", "debian10"]
 
     steps:
       - uses: "actions/checkout@v2"
