--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   author: "Nick Janetakis"
   description: "Install and configure Docker / Docker Compose."
   license: "MIT"
-  min_ansible_version: 2.5
+  min_ansible_version: "2.10.0"
 
   platforms:
     - name: "Ubuntu"
