Use a handler for reloading the systemd daemon
This should have been done a long time ago!

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: Reload systemd daemon
+  ansible.builtin.systemd:
+    daemon_reload: true
+
 - name: Restart Docker
   ansible.builtin.systemd:
     name: "docker"
