--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,6 +50,7 @@
     group: "root"
     mode: "0644"
   when: docker__default_daemon_json | d() or docker__daemon_json | d()
+  notify: ["Restart Docker"]
 
 - name: Install Docker
   retries: 20
