Add support for installing Docker Compose v2
Both Docker Compose v1 and v2 are installed now. You can choose which
one to use.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,7 @@ docker__version: ""
 docker__state: "present"
 
 docker__compose_version: ""
+docker__compose_v2_version: ""
 
 docker__users: ["{{ ansible_env.SUDO_USER | d('root') }}"]
 
