--- a/tests/test.yml
+++ b/tests/test.yml
@@ -6,6 +6,8 @@
   vars:
     docker__version: "5:20.10.7"
 
+    docker__compose_v2_version: "2.5.0"
+
     docker__users: ["test"]
 
     docker__daemon_json: |
