--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -75,15 +75,22 @@
       - "docker-compose-plugin"
     state: "{{ docker__state }}"
 
-- name: Install Python packages
-  ansible.builtin.pip:
-    name: >
-      {{ item.name }}{% if item.version | d() %}=={{ item.version }}{% endif %}
-    virtualenv: "{{ docker__pip_virtualenv }}"
-    virtualenv_python: "python3"
-    state: "{{ item.state | d('present') }}"
-  loop: "{{ docker__default_pip_packages + docker__pip_packages }}"
-  when: item.name | d()
+- block:
+    - name: Install Python packages
+      ansible.builtin.pip:
+        name: >
+          {{ item.name }}{% if item.version | d() %}=={{ item.version }}{% endif %}
+        virtualenv: "{{ docker__pip_virtualenv }}"
+        virtualenv_python: "python3"
+        state: "{{ item.state | d('present') }}"
+      loop: "{{ docker__default_pip_packages + docker__pip_packages }}"
+      when: item.name | d()
+  rescue:
+    - name: Handle upgrade case
+      ansible.builtin.file:
+        path: /usr/local/lib/docker/virtualenv
+        state: absent
+    - include_tasks: main.yml
 
 - name: Create python3-docker proxy script to access the Virtualenv's interpreter
   ansible.builtin.template:
