Explicitly install Docker CLI and rootless extras
Without doing this these packages won't get updated
when you install a new version of Docker.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -72,6 +72,8 @@
   ansible.builtin.apt:
     name:
       - "docker-{{ docker__edition }}"
+      - "docker-{{ docker__edition }}-cli"
+      - "docker-{{ docker__edition }}-rootless-extras"
       - "docker-compose-plugin"
     state: "{{ docker__state }}"
 
