Remove docker__edition since ce is the only choice

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -71,7 +71,7 @@
   delay: 15
   ansible.builtin.apt:
     name:
-      - "docker-{{ docker__edition }}"
+      - "docker-ce"
       - "docker-compose-plugin"
     state: "{{ docker__state }}"
 
