--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -85,7 +85,7 @@
   loop: "{{ docker__default_pip_packages + docker__pip_packages }}"
   when: item.name | d()
 
-- name: Create python3-docker proxy script to access the Virtualenv's interpreter
+- name: Create python3-docker proxy script to access Virtualenv's interpreter
   ansible.builtin.template:
     src: "usr/local/bin/python3-docker.j2"
     dest: "/usr/local/bin/python3-docker"
@@ -141,10 +141,8 @@
 - name: Restart Docker now to make sure `docker login` works
   ansible.builtin.meta: "flush_handlers"
 
-# It's safe to ignore no-log-password because we're removing the password from
-# the output with the loop_control property.
 - name: Manage Docker registry login credentials
-  ansible.builtin.docker_login:  # noqa no-log-password
+  community.docker.docker_login:
     registry_url: "{{ item.registry_url | d(omit) }}"
     username: "{{ item.username }}"
     password: "{{ item.password }}"
@@ -154,7 +152,7 @@
     state: "{{ item.state | d('present') }}"
   loop: "{{ docker__registries }}"
   loop_control:
-    label: '{{ {"registry_url": item.registry_url | d("https://index.docker.io/v1/"), "username": item.username, "state": item.state | d("present")} }}'
+    label: '{{ {"registry_url": item.registry_url | d("https://index.docker.io/v1/"), "username": item.username, "state": item.state | d("present")} }}'  # yamllint disable-line rule:line-length
   when: item.username | d() and item.password | d()
   become: true
   become_user: "{{ docker__login_become_user | d('root') }}"
