--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,10 +36,18 @@
   ansible.builtin.apt:
     name: "{{ docker__package_dependencies + docker__pip_dependencies }}"
 
+- name: Create /etc/apt/keyrings directory
+  ansible.builtin.file:
+    path: "/etc/apt/keyrings"
+    state: "directory"
+    owner: "root"
+    group: "root"
+    mode: "0755"
+
 - name: Add Docker's APT repository key
   ansible.builtin.get_url:
     url: "{{ docker__apt_repository_url }}/gpg"
-    dest: "/etc/apt/trusted.gpg.d/docker.asc"
+    dest: "/etc/apt/keyrings/docker.asc"
     checksum: "{{ docker__apt_key_checksum }}"
     owner: "root"
     group: "root"
