Explicitly install Docker CLI and rootless extras
Without doing this these packages won't get updated
when you install a new version of Docker.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -84,6 +84,8 @@
   ansible.builtin.apt:
     name:
       - "docker-ce"
+      - "docker-ce-cli"
+      - "docker-ce-rootless-extras"
       - "docker-compose-plugin"
     state: "{{ docker__state }}"
 
