Document Ubuntu 24.04 LTS support
It has been supported since it was released but not explicitly
mentioned.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,8 +10,8 @@ galaxy_info:
   platforms:
     - name: "Ubuntu"
       versions:
-        - "focal"
         - "jammy"
+        - "noble"
     - name: "Debian"
       versions:
         - "bullseye"
